# jwt-tester

./: .gitignore  README.md
jwt-tester-app/: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.npm  build.ps1  build.sh
jwt-tester-app/docs/: how-it-works.md
jwt-tester-app/scripts/: coverage.ps1  coverage.sh
jwt-tester-app/src/: claims.rs  date_utils.rs  error.rs  io_utils.rs  jwks.rs  jwt_ops.rs  keygen.rs  main.rs  output.rs  vault_export.rs
jwt-tester-app/src/cli/: app.rs  crypto.rs  mod.rs  vault.rs
jwt-tester-app/src/commands/: completion.rs  decode.rs  encode.rs  inspect.rs  mod.rs  split.rs  vault.rs  vault_tests.rs  verify.rs
jwt-tester-app/src/key_resolver/: format.rs  mod.rs  project.rs  resolve.rs
jwt-tester-app/src/ui/: mod.rs
jwt-tester-app/src/ui/handlers/: api.rs  assets.rs  jwt.rs  mod.rs  security.rs  types.rs  vault.rs
jwt-tester-app/src/vault/: export.rs  helpers.rs  key.rs  keychain.rs  keychain_file.rs  mod.rs  project.rs  snapshot.rs  sqlite.rs  store.rs  tests.rs  token.rs  types.rs
jwt-tester-app/tests/: cli_asymmetric.rs  cli_completion.rs  cli_decode_inspect_split.rs  cli_end_to_end.rs  cli_hmac.rs  cli_input_sources.rs  cli_jwks.rs  cli_split_errors.rs  cli_text_output.rs  cli_vault.rs  cli_vault_export_import.rs  cli_verify_explain.rs
jwt-tester-app/tests/common/: mod.rs
jwt-tester-app/tests/fixtures/: claims.json  ec256_private.der  ec256_private.pem  ec256_public.der  ec256_public.pem  ec384_private.der  ec384_private.pem  ec384_public.der  ec384_public.pem  ed25519_private.der  ed25519_private.pem  ed25519_public.der  ed25519_public.pem  generate.py  hmac.key  hmac_alt.key  jwks.json  jwks_single.json  rsa_private.der  rsa_private.pem  rsa_public.der  rsa_public.pem
jwt-tester-app/ui/: index.html  package-lock.json  package.json  vite.config.js
jwt-tester-app/ui/src/: App.jsx  api.js  styles.css
jwt-tester-app/ui/src/components/Layout/: Sidebar.jsx
jwt-tester-app/ui/src/components/Shared/: Modal.jsx  NewProjectModal.jsx  Stat.jsx  StatusBar.jsx  (+2 more)
jwt-tester-app/ui/src/utils/: projectSelection.js
(+55 files in other folders)
